Drivers inside nodegroups inside nodegroups don't show up in Driver Editor #63281

Closed
opened 2019-04-04 19:44:41 +02:00 by Demeter Dzadik · 3 comments
Member

Blender Version
Broken: 2.80, d986b04bd3

Short description of error
Title is not a typo.

If a driver can be found in a nested nodegroup, it doesn't show up in the driver editor. Single value drivers can still be edited via right click->edit driver, however, multi-value drivers such as RGB values, which do not directly support right click->edit driver, cannot be edited unless an un-nested copy of the nodegroup is created.

DUKNYiK1E3.mp4

Exact steps for others to reproduce the error

  • Create a nodegroup

  • Create a nodegroup inside that nodegroup

  • Create a driver in there

  • Right click on the driver->Open in Driver Editor

  • Driver Editor opens but your driver is not there.

  • Go out one nodegroup

  • Ctrl+Alt+G to dissolve the nested nodegroup

  • Driver now shows up correctly.

**Blender Version** Broken: 2.80, d986b04bd302 **Short description of error** Title is not a typo. If a driver can be found in a nested nodegroup, it doesn't show up in the driver editor. Single value drivers can still be edited via right click->edit driver, however, multi-value drivers such as RGB values, which do not directly support right click->edit driver, cannot be edited unless an un-nested copy of the nodegroup is created. [DUKNYiK1E3.mp4](https://archive.blender.org/developer/F6912125/DUKNYiK1E3.mp4) **Exact steps for others to reproduce the error** - Create a nodegroup - Create a nodegroup inside that nodegroup - Create a driver in there - Right click on the driver->Open in Driver Editor - Driver Editor opens but your driver is not there. - Go out one nodegroup - Ctrl+Alt+G to dissolve the nested nodegroup - Driver now shows up correctly.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Sebastian Parborg self-assigned this 2019-04-04 19:46:22 +02:00

This issue was referenced by d140e597a6

This issue was referenced by d140e597a6a8f2bef8cbc2626effef41025b5688

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63281
No description provided.